# serial_monitor

./: Cargo.toml  README.md  build.rs  main.rs  resource.rc
src/: lib.rs  main.rs
src/components/: mod.rs  serial_port.rs  ui.rs
